feat: btn17 and refactor the structure

--- a/index.html
+++ b/index.html
@@ -47,103 +47,143 @@
                 <div class="challenge">
                     <h5 class="title">#One</h5>
 
-                    <button class="btn btn1">
-                        <a class="link" href="./1-10/ch1/index.html">PUBLISH</a>
-                    </button>
+                    <a class="link" href="./1-10/ch1/index.html">
+                        <button class="btn btn1">
+                            PUBLISH
+                        </button>
+                    </a>
+
                 </div>
 
                 <div class="challenge">
                     <h5 class="title">#Two</h5>
-                    <button class="btn btn2">
-                        <a class="link" href="./1-10/ch2/index.html">DIGITAL CLOCK</a>
-                    </button>
+                    <a class="link" href="./1-10/ch2/index.html">
+                        <button class="btn btn2">
+                            DIGITAL CLOCK
+                        </button>
+                    </a>
                 </div>
                 <div class="challenge">
                     <h5 class="title">#Three</h5>
 
-                    <button class="btn btn3">
-                        <a class="link" href="./1-10/ch3/index.html">STOP WATCH</a>
-                    </button>
+                    <a class="link" href="./1-10/ch3/index.html">
+                        <button class="btn btn3">
+                            STOP WATCH
+                        </button>
+                    </a>
                 </div>
                 <div class="challenge">
                     <h5 class="title">#Four</h5>
-                    <button class="btn btn4">
-                        <a class="link" href="./1-10/ch4/index.html">RATE</a>
-
-                    </button>
+                    <a class="link" href="./1-10/ch4/index.html">
+                        <button class="btn btn4">
+                            RATE
+                        </button>
+                    </a>
                 </div>
                 <div class="challenge">
                     <h5 class="title">#Five</h5>
-                    <button class="btn btn5">
-                        <a class="link" href="./1-10/ch5/index.html">RGB SELECTOR</a>
-                    </button>
+                    <a class="link" href="./1-10/ch5/index.html">
+                        <button class="btn btn5">
+                            RGB SELECTOR
+                        </button>
+                    </a>
                 </div>
                 <div class="challenge">
                     <h5 class="title">#Six</h5>
-                    <button class="btn btn6">
-                        <a class="link" href="./1-10/ch6/index.html">XO</a>
-                    </button>
+                    <a class="link" href="./1-10/ch6/index.html">
+                        <button class="btn btn6">
+                            XO
+                        </button>
+                    </a>
                 </div>
                 <div class="challenge">
                     <h5 class="title">#Seven</h5>
-                    <button class="btn btn7">
-                        <a class="link" href="./1-10/ch7/index.html">DRAG</a>
-                    </button>
+                    <a class="link" href="./1-10/ch7/index.html">
+                        <button class="btn btn7">
+                            DRAG
+                        </button>
+                    </a>
                 </div>
                 <div class="challenge">
                     <h5 class="title">#Eight</h5>
-                    <button class="btn btn8">
-                        <a class="link" href="./1-10/ch8/index.html">ANALOG CLOCK</a>
-                    </button>
+                    <a class="link" href="./1-10/ch8/index.html">
+                        <button class="btn btn8">
+                            ANALOG CLOCK
+                        </button>
+                    </a>
                 </div>
                 <div class="challenge">
                     <h5 class="title">#Nine</h5>
-                    <button class="btn btn9">
-                        <a class="link" href="./1-10/ch9/index.html">TASK MANAGER</a>
-                    </button>
+                    <a class="link" href="./1-10/ch9/index.html">
+                        <button class="btn btn9">
+                            TASK MANAGER
+                        </button>
+                    </a>
                 </div>
                 <div class="challenge">
                     <h5 class="title">#Ten</h5>
-                    <button class="btn btn10">
-                        <a class="link" href="./1-10/ch10/index.html">Full Screen Menu</a>
-                    </button>
+                    <a class="link" href="./1-10/ch10/index.html">
+                        <button class="btn btn10">
+                            Full Screen Menu
+                        </button>
+                    </a>
                 </div>
 
                 <div class="challenge">
                     <h5 class="title">#Eleven</h5>
-                    <button class="btn btn11">
-                        <a class="link" href="./11-20/ch11/index.html">CHECKBOX</a>
-                    </button>
+                    <a class="link" href="./11-20/ch11/index.html">
+                        <button class="btn btn11">
+                            CHECKBOX
+                        </button>
+                    </a>
                 </div>
                 <div class="challenge">
                     <h5 class="title">#Twelve</h5>
-                    <button class="btn btn12">
-                        <a class="link" href="./11-20/ch12/index.html">Dark Light Theme</a>
-                    </button>
+                    <a class="link" href="./11-20/ch12/index.html">
+                        <button class="btn btn12">
+                            Dark Light Theme
+                        </button>
+                    </a>
                 </div>
                 <div class="challenge">
                     <h5 class="title">#Thirteen</h5>
-                    <button class="btn btn13">
-                        <a class="link" href="./11-20/ch13/index.html">Nokia 3310 Snake</a>
-                    </button>
+                    <a class="link" href="./11-20/ch13/index.html">
+                        <button class="btn btn13">
+                            Nokia 3310 Snake
+                        </button>
+                    </a>
                 </div>
                 <div class="challenge">
                     <h5 class="title">#Fourteen</h5>
-                    <button class="btn btn14">
-                        <a class="link" href="./11-20/ch14/index.html">MANGO</a>
-                    </button>
+                    <a class="link" href="./11-20/ch14/index.html">
+                        <button class="btn btn14">
+                            MANGO
+                        </button>
+                    </a>
                 </div>
                 <div class="challenge">
                     <h5 class="title">#Fifteen</h5>
-                    <button class="btn btn15">
-                        <a class="link" href="./11-20/ch15/index.html">ACCORDION</a>
-                    </button>
+                    <a class="link" href="./11-20/ch15/index.html">
+                        <button class="btn btn15">
+                            ACCORDION
+                        </button>
+                    </a>
                 </div>
                 <div class="challenge">
                     <h5 class="title">#Sixteen</h5>
-                    <button class="btn btn16">
-                        <a class="link" href="./11-20/ch16/index.html">PROCESSING ANIMATION</a>
-                    </button>
+                    <a class="link" href="./11-20/ch16/index.html">
+                        <button class="btn btn16">
+                            PROCESSING ANIMATION
+                        </button>
+                    </a>
+                </div>
+                <div class="challenge">
+                    <h5 class="title">#Seventeen</h5>
+                    <a class="link" href="./11-20/ch17/index.html">
+                        <button class="btn btn17">
+                            PONG
+                        </button>
+                    </a>
                 </div>
         </div>
         </main>
