--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                     <h5 class="title">#Seventeen</h5>
                     <a class="link" href="./11-20/ch17/index.html">
                         <button class="btn btn17">
-                            PONG
+                            3D CAROUSEL
                         </button>
                     </a>
                 </div>
