--- a/index.html
+++ b/index.html
@@ -185,6 +185,14 @@
                         </button>
                     </a>
                 </div>
+                <div class="challenge">
+                    <h5 class="title">#Eighteen</h5>
+                    <a class="link" href="./11-20/ch18/index.html">
+                        <button class="btn btn18">
+                            Voyage Slider
+                        </button>
+                    </a>
+                </div>
         </div>
         </main>
     </div>
