feat: new challenges

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Spartan:wght@200;300;400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Spartan:wght@200;300;400;500;700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./index.css">
     <link rel="stylesheet" href="./sidebar.css">
@@ -48,7 +49,7 @@
                     <h5 class="title">#One</h5>
 
                     <a class="link" href="./1-10/ch1/index.html">
-                        <button class="btn btn1">
+                        <button class="btn">
                             PUBLISH
                         </button>
                     </a>
@@ -58,7 +59,7 @@
                 <div class="challenge">
                     <h5 class="title">#Two</h5>
                     <a class="link" href="./1-10/ch2/index.html">
-                        <button class="btn btn2">
+                        <button class="btn">
                             DIGITAL CLOCK
                         </button>
                     </a>
@@ -67,7 +68,7 @@
                     <h5 class="title">#Three</h5>
 
                     <a class="link" href="./1-10/ch3/index.html">
-                        <button class="btn btn3">
+                        <button class="btn">
                             STOP WATCH
                         </button>
                     </a>
@@ -75,7 +76,7 @@
                 <div class="challenge">
                     <h5 class="title">#Four</h5>
                     <a class="link" href="./1-10/ch4/index.html">
-                        <button class="btn btn4">
+                        <button class="btn">
                             RATE
                         </button>
                     </a>
@@ -83,7 +84,7 @@
                 <div class="challenge">
                     <h5 class="title">#Five</h5>
                     <a class="link" href="./1-10/ch5/index.html">
-                        <button class="btn btn5">
+                        <button class="btn">
                             RGB SELECTOR
                         </button>
                     </a>
@@ -91,7 +92,7 @@
                 <div class="challenge">
                     <h5 class="title">#Six</h5>
                     <a class="link" href="./1-10/ch6/index.html">
-                        <button class="btn btn6">
+                        <button class="btn">
                             XO
                         </button>
                     </a>
@@ -99,7 +100,7 @@
                 <div class="challenge">
                     <h5 class="title">#Seven</h5>
                     <a class="link" href="./1-10/ch7/index.html">
-                        <button class="btn btn7">
+                        <button class="btn">
                             DRAG
                         </button>
                     </a>
@@ -107,7 +108,7 @@
                 <div class="challenge">
                     <h5 class="title">#Eight</h5>
                     <a class="link" href="./1-10/ch8/index.html">
-                        <button class="btn btn8">
+                        <button class="btn">
                             ANALOG CLOCK
                         </button>
                     </a>
@@ -115,7 +116,7 @@
                 <div class="challenge">
                     <h5 class="title">#Nine</h5>
                     <a class="link" href="./1-10/ch9/index.html">
-                        <button class="btn btn9">
+                        <button class="btn">
                             TASK MANAGER
                         </button>
                     </a>
@@ -123,7 +124,7 @@
                 <div class="challenge">
                     <h5 class="title">#Ten</h5>
                     <a class="link" href="./1-10/ch10/index.html">
-                        <button class="btn btn10">
+                        <button class="btn">
                             Full Screen Menu
                         </button>
                     </a>
@@ -132,7 +133,7 @@
                 <div class="challenge">
                     <h5 class="title">#Eleven</h5>
                     <a class="link" href="./11-20/ch11/index.html">
-                        <button class="btn btn11">
+                        <button class="btn">
                             CHECKBOX
                         </button>
                     </a>
@@ -140,7 +141,7 @@
                 <div class="challenge">
                     <h5 class="title">#Twelve</h5>
                     <a class="link" href="./11-20/ch12/index.html">
-                        <button class="btn btn12">
+                        <button class="btn">
                             Dark Light Theme
                         </button>
                     </a>
@@ -148,7 +149,7 @@
                 <div class="challenge">
                     <h5 class="title">#Thirteen</h5>
                     <a class="link" href="./11-20/ch13/index.html">
-                        <button class="btn btn13">
+                        <button class="btn">
                             Nokia 3310 Snake
                         </button>
                     </a>
@@ -156,7 +157,7 @@
                 <div class="challenge">
                     <h5 class="title">#Fourteen</h5>
                     <a class="link" href="./11-20/ch14/index.html">
-                        <button class="btn btn14">
+                        <button class="btn">
                             MANGO
                         </button>
                     </a>
@@ -164,7 +165,7 @@
                 <div class="challenge">
                     <h5 class="title">#Fifteen</h5>
                     <a class="link" href="./11-20/ch15/index.html">
-                        <button class="btn btn15">
+                        <button class="btn">
                             ACCORDION
                         </button>
                     </a>
@@ -172,7 +173,7 @@
                 <div class="challenge">
                     <h5 class="title">#Sixteen</h5>
                     <a class="link" href="./11-20/ch16/index.html">
-                        <button class="btn btn16">
+                        <button class="btn">
                             PROCESSING ANIMATION
                         </button>
                     </a>
@@ -180,7 +181,7 @@
                 <div class="challenge">
                     <h5 class="title">#Seventeen</h5>
                     <a class="link" href="./11-20/ch17/index.html">
-                        <button class="btn btn17">
+                        <button class="btn">
                             3D CAROUSEL
                         </button>
                     </a>
@@ -188,7 +189,7 @@
                 <div class="challenge">
                     <h5 class="title">#Eighteen</h5>
                     <a class="link" href="./11-20/ch18/index.html">
-                        <button class="btn btn18">
+                        <button class="btn">
                             Voyage Slider
                         </button>
                     </a>
@@ -196,8 +197,40 @@
                 <div class="challenge">
                     <h5 class="title">#Ninteen</h5>
                     <a class="link" href="./11-20/ch19/index.html">
-                        <button class="btn btn19">
+                        <button class="btn">
                             Landing Page
+                        </button>
+                    </a>
+                </div>
+                <div class="challenge">
+                    <h5 class="title">#Twenty</h5>
+                    <a class="link" href="./11-20/ch20/index.html">
+                        <button class="btn">
+                            The Pyramid
+                        </button>
+                    </a>
+                </div>
+                <div class="challenge">
+                    <h5 class="title">#TwentyOne</h5>
+                    <a class="link" href="./21-30/ch21/index.html">
+                        <button class="btn">
+                            Loading
+                        </button>
+                    </a>
+                </div>
+                <div class="challenge">
+                    <h5 class="title">#TwentyTwo</h5>
+                    <a class="link" href="./21-30/ch22/index.html">
+                        <button class="btn">
+                            JS Drum Kit
+                        </button>
+                    </a>
+                </div>
+                <div class="challenge">
+                    <h5 class="title">#TwentyThree</h5>
+                    <a class="link" href="./21-30/ch23/index.html">
+                        <button class="btn">
+                            To Do List
                         </button>
                     </a>
                 </div>
