--- a/21-30/ch22/index.html
+++ b/21-30/ch22/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Courier+Prime:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
-    <title>JS Drum Kit</title>
+    <title>Drum Kit</title>
 </head>
 
 <body>
