--- a/index.html
+++ b/index.html
@@ -233,6 +233,14 @@
                         </button>
                     </a>
                 </div>
+                <div class="challenge">
+                    <h5 class="title">#TwentyFour</h5>
+                    <a class="link" href="./21-30/ch24/index.html">
+                        <button class="btn">
+                            Random User API
+                        </button>
+                    </a>
+                </div>
         </div>
         </main>
     </div>
