--- a/21-30/ch24/index.html
+++ b/21-30/ch24/index.html
@@ -32,7 +32,7 @@
                 <ion-icon data-email="My email is" class="icon" size="large" name="mail-outline"></ion-icon>
                 <ion-icon data-dob="My birthday is" class="icon" size="large" name="calendar-outline"></ion-icon>
                 <ion-icon data-location="My location is" class="icon" size="large" name="location-outline"></ion-icon>
-                <ion-icon data-phone="My phone is" class="icon" size="large" name="call-outline"></ion-icon>
+                <ion-icon data-cell="My cell is" class="icon" size="large" name="call-outline"></ion-icon>
                 <ion-icon data-login="My password is" class="icon" size="large" name="key-outline"></ion-icon>
             </div>
 
