fix: clear button and title

--- a/21-30/ch23/index.html
+++ b/21-30/ch23/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <title>TO DO LIST</title>
 </head>
 
 <body class="dark">
@@ -46,7 +46,7 @@
                                 <button>Completed</button>
                             </li>
                         </ul>
-                        <button class="clear">Clear Completed</button>
+                        <button class="clear">Clear List</button>
                     </div>
                 </div>
             </section>
