feat: able to save in localStorage

--- a/21-30/ch23/index.html
+++ b/21-30/ch23/index.html
@@ -36,17 +36,17 @@
                             list is empty
                         </span>
                         <ul class="filters">
-                            <li class="all current">
-                                <button>All</button>
+                            <li>
+                                <button class="all current">All</button>
                             </li>
-                            <li class="active">
-                                <button>Active</button>
+                            <li>
+                                <button class="active">Active</button>
                             </li>
-                            <li class="completed">
-                                <button>Completed</button>
+                            <li>
+                                <button class="completed">Completed</button>
                             </li>
                         </ul>
-                        <button class="clear">Clear List</button>
+                        <button class="clear">Clear Completed</button>
                     </div>
                 </div>
             </section>
