--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Spartan:wght@200;300;400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Spartan:wght@200;300;400;500;700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./index.css">
     <link rel="stylesheet" href="./sidebar.css">
@@ -238,6 +239,14 @@
                     <a class="link" href="./21-30/ch24/index.html">
                         <button class="btn">
                             Random User API
+                        </button>
+                    </a>
+                </div>
+                <div class="challenge">
+                    <h5 class="title">#TwentyFive</h5>
+                    <a class="link" href="./21-30/ch25/index.html">
+                        <button class="btn">
+                            Filter City
                         </button>
                     </a>
                 </div>
