--- a/app-idea/1-Bin2Dec/index.html
+++ b/app-idea/1-Bin2Dec/index.html
@@ -9,32 +9,20 @@
   <link href="https://fonts.googleapis.com/css2?family=Spartan:wght@200;300;400;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="./index.css">
-  <title>App Ideas</title>
+  <title>Bin2Dec</title>
 </head>
 
 <body>
-  <div class="wrapper">
-    <div class="container">
-      <header>
-        <h1 class="header">App Idea</h1>
-        <div class="logo"></div>
-      </header>
-
-      <main class="main">
-        <div class="challenge">
-          <h5 class="title">#One</h5>
-
-          <a class="link" href="./1-Bin2Dec/index.html">
-            <button class="btn">
-              Bin2Dec
-            </button>
-          </a>
-
-        </div>
-
-
-      </main>
+  <h2>Binary 2 Decimal</h2>
+  <div class="row">
+    <div class="column">
+      <input class="input" type="number" placeholder="binary number" />
+      <span class="helperText"></span>
     </div>
+    <button class="button">Convert to Decimal</button>
+
+  </div>
+  <script src="./index.js"></script>
 </body>
 
 </html>
