feat: add challeng #27

--- a/index.html
+++ b/index.html
@@ -258,6 +258,14 @@
                         </button>
                     </a>
                 </div>
+                <div class="challenge">
+                    <h5 class="title">#TwentySeven</h5>
+                    <a class="link" href="./21-30/27-border-radius_previewer/index.html">
+                        <button class="btn">
+                            Fancy Border-Radius Previewer
+                        </button>
+                    </a>
+                </div>
             </main>
         </div>
 
