--- a/index.html
+++ b/index.html
@@ -266,6 +266,13 @@
                         </button>
                     </a>
                 </div>
+                <div class="challenge">
+                    <h5 class="title">#TwentyEight</h5>
+                    <a class="link" href="./21-30/28-christmas_light/index.html">
+                        <button class="btn">
+                            Christmas Light
+                        </button </a>
+                </div>
             </main>
         </div>
 
