--- a/21-30/27-cause-effect/index.html
+++ b/21-30/27-cause-effect/index.html
@@ -13,11 +13,22 @@
   <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700;800;900&display=swap"
     rel="stylesheet">
 
-  <title>Fancy Border-Radius Previewer</title>
+  <title>Cause Effect</title>
 </head>
 
 <body>
+  <div class="container">
+    <aside class="aside">
+      <nav>
+        <ul class="navList">
 
+        </ul>
+      </nav>
+    </aside>
+    <main class="main">
+      about someone
+    </main>
+  </div>
 
   <script src="./index.js" type="module"></script>
 </body>
