--- a/index.html
+++ b/index.html
@@ -258,11 +258,11 @@
                         </button>
                     </a>
                 </div>
-                <div class="challenge">
+                <div class="challenge hide">
                     <h5 class="title">#TwentySeven</h5>
-                    <a class="link" href="./21-30/27-border-radius_previewer/index.html">
+                    <a class="link" href="./21-30/27-cause-effect/index.html">
                         <button class="btn">
-                            Fancy Border-Radius Previewer
+                            Cause Effect
                         </button>
                     </a>
                 </div>
