feat: upload file and read the content

--- a/21-30/29-CSVJSONConvertor/index.html
+++ b/21-30/29-CSVJSONConvertor/index.html
@@ -20,6 +20,7 @@
   <div class="row">
     <section class="col input_container">
       <textarea name="content" cols="30" rows="10" class="fileContent content_box"></textarea>
+      <input type="file" " class=" uploadFileInput" hidden />
       <button class="uploadFileButton button">Or upload file</button>
       <div class="row gap__small">
         <input class="pathInput" type="text" name="path" placeholder="Please enter path to file">
