feat: accept type

--- a/21-30/29-CSVJSONConvertor/index.html
+++ b/21-30/29-CSVJSONConvertor/index.html
@@ -21,7 +21,7 @@
     <section class="col input_container">
       <textarea name="content" cols="30" rows="10" class="fileContent content_box"></textarea>
       <label for="uploadFile" class="label">
-        <input type="file" id="uploadFile" class="uploadFileInput" hidden />
+        <input accept=".json, .csv" type="file" id="uploadFile" class="uploadFileInput" hidden />
         <span class="upload">Or upload file</span>
       </label>
       <div class="row gap__small">
