feat: css variables

--- a/app-idea/index.html
+++ b/app-idea/index.html
@@ -31,6 +31,16 @@
           </a>
 
         </div>
+        <div class="challenge">
+          <h5 class="title">#Two</h5>
+
+          <a class="link" href="./2-DynamicCssVariables/index.html">
+            <button class="btn">
+              Dynamic Css Variables
+            </button>
+          </a>
+
+        </div>
 
 
       </main>
