refactor: flipping image

--- a/app-idea/index.html
+++ b/app-idea/index.html
@@ -34,9 +34,9 @@
         <div class="challenge">
           <h5 class="title">#Two</h5>
 
-          <a class="link" href="./2-DynamicCssVariables/index.html">
+          <a class="link" href="./2-FlipImage/index.html">
             <button class="btn">
-              Dynamic Css Variables
+              Flip Image
             </button>
           </a>
 
