fix: button class name

--- a/app-idea/2-FlipImage/index.html
+++ b/app-idea/2-FlipImage/index.html
@@ -15,87 +15,87 @@
 <body>
   <h2>Flip Image</h2>
   <div class="slider_container">
-    <button class="image_card none">
+    <button class="image_button none">
       <image alt="burger" src="./asset/burger.jpg" />
       <h4>None</h4>
     </button>
-    <button class="image_card pencil">
+    <button class="image_button pencil">
       <image alt="burger" src="./asset/burger.jpg" />
       <h4>Pencil</h4>
     </button>
-    <button class="image_card waterColor">
+    <button class="image_button waterColor">
       <image alt="burger" src="./asset/burger.jpg" />
       <h4>Watercolor</h4>
     </button>
-    <button class="image_card emboss">
+    <button class="image_button emboss">
       <image alt="burger" src="./asset/burger.jpg" />
       <h4>Emboss</h4>
     </button>
-    <button class="image_card coloredPencil">
+    <button class="image_button coloredPencil">
       <image alt="burger" src="./asset/burger.jpg" />
       <h4>Colored Pencil</h4>
     </button>
-    <button class="image_card chalkboard">
+    <button class="image_button chalkboard">
       <image alt="burger" src="./asset/burger.jpg" />
       <h4>Chalkboard</h4>
     </button>
-    <button class="image_card coloredChalkboard">
+    <button class="image_button coloredChalkboard">
       <image alt="burger" src="./asset/burger.jpg" />
       <h4>Colored Chalkboard</h4>
     </button>
-    <button class="image_card airbrush">
+    <button class="image_button airbrush">
       <image alt="burger" src="./asset/burger.jpg" />
       <h4>Airbrush</h4>
     </button>
-    <button class="image_card hallucination">
+    <button class="image_button hallucination">
       <image alt="burger" src="./asset/burger.jpg" />
       <h4>Hallucination</h4>
     </button>
-    <button class="image_card flanned">
+    <button class="image_button flanned">
       <image alt="burger" src="./asset/burger.jpg" />
       <h4>Flannel</h4>
     </button>
-    <button class="image_card lowInkHor">
+    <button class="image_button lowInkHor">
       <image alt="burger" src="./asset/burger.jpg" />
       <h4>Low Ink <br />(Horizontal)</h4>
     </button>
-    <button class="image_card lowInkVer">
+    <button class="image_button lowInkVer">
       <image alt="burger" src="./asset/burger.jpg" />
       <h4>Low Ink <br />(Vertical)</h4>
     </button>
-    <button class="image_card collage">
+    <button class="image_button collage">
       <image alt="burger" src="./asset/burger.jpg" />
       <h4>Collage</h4>
     </button>
-    <button class="image_card mosaic">
+    <button class="image_button mosaic">
       <image alt="burger" src="./asset/burger.jpg" />
       <h4>Mosaic</h4>
     </button>
-    <button class="image_card photoBorder">
+    <button class="image_button photoBorder">
       <image alt="burger" src="./asset/burger.jpg" />
       <h4>Photo Border</h4>
     </button>
-    <button class="image_card infrared">
+    <button class="image_button infrared">
       <image alt="burger" src="./asset/burger.jpg" />
       <h4>Infrared</h4>
     </button>
-    <button class="image_card nightVersion">
+    <button class="image_button nightVersion">
       <image alt="burger" src="./asset/burger.jpg" />
       <h4>Night Vesion</h4>
     </button>
-    <button class="image_card warhol">
+    <button class="image_button warhol">
       <image alt="burger" src="./asset/burger.jpg" />
       <h4>Warhol</h4>
     </button>
-    <button class="image_card selectiveColor">
+    <button class="image_button selectiveColor">
       <image alt="burger" src="./asset/burger.jpg" />
       <h4>Selective Color</h4>
     </button>
-    <button class="image_card mirrorHor">
+    <button class="image_button mirrorHor">
       <image alt="burger" src="./asset/burger.jpg" />
       <h4>mirror <br />(Horizontal)</h4>
     </button>
-    <button class="image_card mirrorVer">
+    <button class="image_button mirrorVer">
       <image alt="burger" src="./asset/burger.jpg" />
       <h4>Mirror <br />(Vertical)</h4>
     </button>
