--- a/app-idea/2-FlipImage/index.html
+++ b/app-idea/2-FlipImage/index.html
@@ -16,95 +16,95 @@
   <h2>Flip Image</h2>
   <div class="slider_container">
     <button data-imageType="None" class="image_button none">
-      <image alt="burger" src="./asset/burger.jpg" />
+      <div class="backgroundImage" style="background-image: url(./asset/burger.jpg);"></div>
       <h4>None</h4>
     </button>
     <button data-imageType="Pencil" class="image_button pencil">
-      <image alt="burger" src="./asset/burger.jpg" />
+      <div class="backgroundImage pencil"></div>
       <h4>Pencil</h4>
     </button>
     <button data-imageType="WaterColor" class="image_button waterColor">
-      <image alt="burger" src="./asset/burger.jpg" />
+      <div class="backgroundImage" style="background-image: url(./asset/burger.jpg);"></div>
       <h4>Watercolor</h4>
     </button>
     <button data-imageType="Emboss" class="image_button emboss">
-      <image alt="burger" src="./asset/burger.jpg" />
+      <div class="backgroundImage" style="background-image: url(./asset/burger.jpg);"></div>
       <h4>Emboss</h4>
     </button>
     <button data-imageType="Colored Pencil" class="image_button coloredPencil">
-      <image alt="burger" src="./asset/burger.jpg" />
+      <div class="backgroundImage" style="background-image: url(./asset/burger.jpg);"></div>
       <h4>Colored Pencil</h4>
     </button>
     <button data-imageType="Chalkboard" class="image_button chalkboard">
-      <image alt="burger" src="./asset/burger.jpg" />
+      <div class="backgroundImage" style="background-image: url(./asset/burger.jpg);"></div>
       <h4>Chalkboard</h4>
     </button>
     <button data-imageType="Colored Chalkboard" class="image_button coloredChalkboard">
-      <image alt="burger" src="./asset/burger.jpg" />
+      <div class="backgroundImage" style="background-image: url(./asset/burger.jpg);"></div>
       <h4>Colored Chalkboard</h4>
     </button>
     <button data-imageType="Airbrush" class="image_button airbrush">
-      <image alt="burger" src="./asset/burger.jpg" />
+      <div class="backgroundImage" style="background-image: url(./asset/burger.jpg);"></div>
       <h4>Airbrush</h4>
     </button>
     <button data-imageType="Hallucination" class="image_button hallucination">
-      <image alt="burger" src="./asset/burger.jpg" />
+      <div class="backgroundImage" style="background-image: url(./asset/burger.jpg);"></div>
       <h4>Hallucination</h4>
     </button>
     <button data-imageType="Flanned" class="image_button flanned">
-      <image alt="burger" src="./asset/burger.jpg" />
+      <div class="backgroundImage" style="background-image: url(./asset/burger.jpg);"></div>
       <h4>Flannel</h4>
     </button>
     <button data-imageType="Low Ink Horizontal" class="image_button lowInkHor">
-      <image alt="burger" src="./asset/burger.jpg" />
+      <div class="backgroundImage" style="background-image: url(./asset/burger.jpg);"></div>
       <h4>Low Ink <br />(Horizontal)</h4>
     </button>
     <button data-imageType="Low Ink Vertical" class="image_button lowInkVer">
-      <image alt="burger" src="./asset/burger.jpg" />
+      <div class="backgroundImage" style="background-image: url(./asset/burger.jpg);"></div>
       <h4>Low Ink <br />(Vertical)</h4>
     </button>
     <button data-imageType="Collage" class="image_button collage">
-      <image alt="burger" src="./asset/burger.jpg" />
+      <div class="backgroundImage" style="background-image: url(./asset/burger.jpg);"></div>
       <h4>Collage</h4>
     </button>
     <button data-imageType="Mosaic" class="image_button mosaic">
-      <image alt="burger" src="./asset/burger.jpg" />
+      <div class="backgroundImage" style="background-image: url(./asset/burger.jpg);"></div>
       <h4>Mosaic</h4>
     </button>
     <button data-imageType="PhotoBorder" class="image_button photoBorder">
-      <image alt="burger" src="./asset/burger.jpg" />
+      <div class="backgroundImage" style="background-image: url(./asset/burger.jpg);"></div>
       <h4>Photo Border</h4>
     </button>
     <button data-imageType="Infrared" class="image_button infrared">
-      <image alt="burger" src="./asset/burger.jpg" />
+      <div class="backgroundImage" style="background-image: url(./asset/burger.jpg);"></div>
       <h4>Infrared</h4>
     </button>
     <button data-imageType="Night Version" class="image_button nightVersion">
-      <image alt="burger" src="./asset/burger.jpg" />
+      <div class="backgroundImage" style="background-image: url(./asset/burger.jpg);"></div>
       <h4>Night Vesion</h4>
     </button>
     <button data-imageType="Warhol" class="image_button warhol">
-      <image alt="burger" src="./asset/burger.jpg" />
+      <div class="backgroundImage" style="background-image: url(./asset/burger.jpg);"></div>
       <h4>Warhol</h4>
     </button>
     <button data-imageType="Selective Color" class="image_button selectiveColor">
-      <image alt="burger" src="./asset/burger.jpg" />
+      <div class="backgroundImage" style="background-image: url(./asset/burger.jpg);"></div>
       <h4>Selective Color</h4>
     </button>
     <button data-imageType="Mirror Horizontal" class="image_button mirrorHor">
-      <image alt="burger" src="./asset/burger.jpg" />
+      <div class="backgroundImage" style="background-image: url(./asset/burger.jpg);"></div>
       <h4>mirror <br />(Horizontal)</h4>
     </button>
     <button data-imageType="Mirror Vertical" class="image_button mirrorVer">
-      <image alt="burger" src="./asset/burger.jpg" />
+      <div class="backgroundImage" style="background-image: url(./asset/burger.jpg);"></div>
       <h4>Mirror <br />(Vertical)</h4>
     </button>
   </div>
 
   <div class="showcase">
-    <div class="showcase_container none">
+    <div class="showcase_container">
       <h2 class="imageType">None</h2>
-      <img class="showcase_image" src="./asset/burger.jpg" alt="burger">
+      <div id="pencil" class="showcase_image"></div>
     </div>
     <div class="handler"></div>
   </div>
