--- a/app-idea/2-FlipImage/index.html
+++ b/app-idea/2-FlipImage/index.html
@@ -19,12 +19,12 @@
       <div class="backgroundImage" style="background-image: url(./asset/burger.jpg);"></div>
       <h4>None</h4>
     </button>
-    <button data-imageType="Pencil" class="image_button pencil">
+    <button data-imageType="Pencil" class="image_button">
       <div class="backgroundImage pencil"></div>
       <h4>Pencil</h4>
     </button>
-    <button data-imageType="WaterColor" class="image_button waterColor">
-      <div class="backgroundImage" style="background-image: url(./asset/burger.jpg);"></div>
+    <button data-imageType="WaterColor" class="image_button">
+      <div class="backgroundImage waterColor"></div>
       <h4>Watercolor</h4>
     </button>
     <button data-imageType="Emboss" class="image_button emboss">
@@ -104,7 +104,7 @@
   <div class="showcase">
     <div class="showcase_container">
       <h2 class="imageType">None</h2>
-      <div id="pencil" class="showcase_image"></div>
+      <div id="waterColor" class="showcase_image"></div>
     </div>
     <div class="handler"></div>
   </div>
