practice all filter and mode

--- a/app-idea/2-FlipImage/index.html
+++ b/app-idea/2-FlipImage/index.html
@@ -104,7 +104,7 @@
   <div class="showcase">
     <div class="showcase_container">
       <h2 class="imageType">None</h2>
-      <div id="waterColor" class="showcase_image"></div>
+      <div id="none" class="showcase_image none"></div>
     </div>
     <div class="handler"></div>
   </div>
